syntax = "proto3";

package scout;

option go_package = "scout-ai/proto;proto";

service ScoutService {
  rpc CreateGame (CreateGameRequest) returns (CreateGameResponse);
  rpc Step       (StepRequest)       returns (StepResponse);
}

message CreateGameRequest {
  int32 num_players = 1;
}

message CreateGameResponse {
  string game_id = 1;
  State initial_state = 2;
}

message StepRequest {
  string game_id = 1;
  int32 action = 2;
}

message StepResponse {
  State state = 1;
  bool done = 2;
}

message GetStateRequest {
  string game_id = 1;
}
